tests/paczka1/fuzzy1/70718468.err
Error in line 15: f7v8ydE S9 38,4
Error in line 18: f7v8ydE S267 15,2
Error in line 16: ghIWJK S9 94,6
Error in line 31: EW6 S9 85,5
Error in line 37: FLw S9 202,0
Error in line 33: FVLw S9 44,8
Error in line 29: S432 S240 280,3
